[metadata]
name = fastauc
version = 0.0.1-dev
author = Remy Liu
description = A fast implementation of auc computation via Numba
long_description = file: README.md
long_description_context_type = text/markdown
license = MIT
license_file = LICENSE

[options]
install_requires =
    numpy >= 1.20.0
    numba >= 0.46.0

zip_safe = false
include_package_data = True
python_requires = >=3.8

packages = find:
package_dir =
    = src

[options.packages.find]
where = src
